Add header text and map caption

--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="styles.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:wght@100..900&display=swap"
-      rel="stylesheet"
+    <meta
+      name="description"
+      content="Everyone is invited to this exclusive stoop sale!"
     />
-    <title>GDG Home</title>
+    <link href="index.css" rel="stylesheet" />
+    <title>Stoop Sale Invite</title>
   </head>
   <body>
+    <header>
+        <h1>Uncover Unique Finds at Our Stoop Sale</h1>
+        <h2>Sat, Aug 10th, 2024</h2>
+        <h2>10AM - 4PM</h2>
+    </header>
+    <figure id="google-map">
 
+        <figcaption>Carroll Gardens, corner of court street and 2nd AVE</figcaption>
+    </figure>
   </body>
+  <script defer src="https://maps.googleapis.com/maps/api/js?keys=AIzaSyAnAIOFNYIUDH909kQiq_fKJzD-k-kCEk8&callback=initMap"
+  <script src="index.js"></script>
 </html>
