--- a/index.html
+++ b/index.html
@@ -12,15 +12,58 @@
   </head>
   <body>
     <header>
-        <h1>Uncover Unique Finds at Our Stoop Sale</h1>
-        <h2>Sat, Aug 10th, 2024</h2>
-        <h2>10AM - 4PM</h2>
+      <h1>Uncover Unique Finds at Our Stoop Sale</h1>
+      <h2>Sat, Aug 10th, 2024</h2>
+      <h2>10AM - 4PM</h2>
     </header>
-    <figure id="google-map">
-
-        <figcaption>Carroll Gardens, corner of court street and 2nd AVE</figcaption>
-    </figure>
+    <a
+      href="https://www.google.com/maps/place/Court+St,+Brooklyn,+NY/@40.6810643,-73.9978157,17z/data=!3m1!4b1!4m6!3m5!1s0x89c25a59afc74fe1:0x3dc42dbcd7f6d772!8m2!3d40.6810643!4d-73.9965256!16s%2Fg%2F1ypmn1jwc?entry=ttu"
+    >
+      <div id="map"></div>
+    </a>
+    <p>Carroll Gardens, corner of court street and 2nd AVE</p>
+    <script>
+      ((g) => {
+        var h,
+          a,
+          k,
+          p = "The Google Maps JavaScript API",
+          c = "google",
+          l = "importLibrary",
+          q = "__ib__",
+          m = document,
+          b = window;
+        b = b[c] || (b[c] = {});
+        var d = b.maps || (b.maps = {}),
+          r = new Set(),
+          e = new URLSearchParams(),
+          u = () =>
+            h ||
+            (h = new Promise(async (f, n) => {
+              await (a = m.createElement("script"));
+              e.set("libraries", [...r] + "");
+              for (k in g)
+                e.set(
+                  k.replace(/[A-Z]/g, (t) => "_" + t[0].toLowerCase()),
+                  g[k]
+                );
+              e.set("callback", c + ".maps." + q);
+              a.src = `https://maps.${c}apis.com/maps/api/js?` + e;
+              d[q] = f;
+              a.onerror = () => (h = n(Error(p + " could not load.")));
+              a.nonce = m.querySelector("script[nonce]")?.nonce || "";
+              m.head.append(a);
+            }));
+        d[l]
+          ? console.warn(p + " only loads once. Ignoring:", g)
+          : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
+      })({
+        key: "AIzaSyB92fiLb4TeBfUyIEiA3TRZmt3gS07uZvA",
+        v: "weekly",
+        // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
+        // Add other bootstrap parameters as needed, using camel case.
+      });
+    </script>
+    <script src="index.js"></script>
   </body>
-  <script defer src="https://maps.googleapis.com/maps/api/js?keys=AIzaSyAnAIOFNYIUDH909kQiq_fKJzD-k-kCEk8&callback=initMap"
-  <script src="index.js"></script>
 </html>
