Add images, description, and like button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,21 @@
     >
       <div id="map"></div>
     </a>
-    <p>Carroll Gardens, corner of court street and 2nd AVE</p>
+    <p>Corner of Court Street and 2nd Avenue, Carroll Gardens, Brooklyn, NY</p>
+    <p>
+      Attention bargain hunters! This stoop sale in Brooklyn is an event you
+      won't want to miss. Browse an array of gently used, high-quality items at
+      unbeatable prices. Whether you're searching for stylish clothing, or
+      unexpected surprises, we've got it all! Don't pass up the chance to score
+      amazing deals and discover one-of-a-kind pieces right in your own
+      community.
+    </p>
+    <img class="responsive-img" src="hangers.jpg" alt="hangers of clothes" />
+    <img class="responsive-img" src="clothes.JPG" alt="rack of clothes" />
+    <button onclick="toggleLike()" id="heart-btn" class="btn"><i class="fa-solid fa-heart"></i></i></button>
+
+    <!-- Scripts below -->
+    <script src="https://kit.fontawesome.com/d6f5b3e8a3.js" crossorigin="anonymous"></script>
     <script>
       ((g) => {
         var h,
@@ -60,8 +74,6 @@
       })({
         key: "AIzaSyB92fiLb4TeBfUyIEiA3TRZmt3gS07uZvA",
         v: "weekly",
-        // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
-        // Add other bootstrap parameters as needed, using camel case.
       });
     </script>
     <script src="index.js"></script>
