Add link buttons that work

--- a/index.html
+++ b/index.html
@@ -30,10 +30,21 @@
       amazing deals and discover one-of-a-kind pieces right in your own
       community.
     </p>
-    <img class="responsive-img" src="hangers.jpg" alt="hangers of clothes" />
-    <img class="responsive-img" src="clothes.JPG" alt="rack of clothes" />
-    <button onclick="toggleLike()" id="heart-btn" class="btn"><i class="fa-solid fa-heart"></i></i></button>
-
+    <figure>
+        <img class="responsive-img" src="hangers.jpg" alt="hangers of clothes" />
+        <img class="responsive-img" src="clothes.JPG" alt="rack of clothes" />
+    </figure>
+    
+    <section>
+        <button onclick="toggleLike()" id="heart-btn" class="btn"><i class="fa-solid fa-heart"></i></i></button>
+        <div id="share-btns">
+            <a class="link" target="blank"><i class="fa-solid fa-link"></i></a>
+            <a class="fb" target="blank"><i class="fa-brands fa-square-facebook"></i></a>
+            <a class="whatsApp" target="blank"><i class="fa-brands fa-square-whatsapp"></i></a>
+            <a class="x" target="blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+        </div>
+    </section>
+    
     <!-- Scripts below -->
     <script src="https://kit.fontawesome.com/d6f5b3e8a3.js" crossorigin="anonymous"></script>
     <script>
