Make h1 font and html margin responsive

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       community.
     </p>
     <figure>
-        <img class="responsive-img" src="hangers.jpg" alt="hangers of clothes" />
-        <img class="responsive-img" src="clothes.JPG" alt="rack of clothes" />
+        <img class="responsive-img" src="hangers.jpg" alt="A close up shot of a row of clothes on hangers." />
+        <img class="responsive-img" src="clothes.JPG" alt="A person's arm reaching out to a piece of clothing on a rack." />
     </figure>
     
-    <section>
+    <section class="btns">
         <button onclick="toggleLike()" id="heart-btn" class="btn"><i class="fa-solid fa-heart"></i></i></button>
         <div id="share-btns">
             <a class="link" target="blank"><i class="fa-solid fa-link"></i></a>
