Make text sizes responsive

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     >
       <div id="map"></div>
     </a>
-    <p>Corner of Court Street and 2nd Avenue, Carroll Gardens, Brooklyn, NY</p>
-    <p>
+    <p id="map-caption">Corner of Court Street and 2nd Avenue, Carroll Gardens, Brooklyn, NY</p>
+    <p id="desc">
       Attention bargain hunters! This stoop sale in Brooklyn is an event you
       won't want to miss. Browse an array of gently used, high-quality items at
       unbeatable prices. Whether you're searching for stylish clothing, or
