--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <body>
     <header>
       <h1>Uncover Unique Finds at Our Stoop Sale</h1>
-      <h2>Sat, Aug 10th, 2024</h2>
-      <h2>10AM - 4PM</h2>
+      <div id="date">
+        <h2>Saturday August 10th</h2>
+        <h2>10am - 4pm</h2>
+      </div>
     </header>
     <a
       href="https://www.google.com/maps/place/Court+St,+Brooklyn,+NY/@40.6810643,-73.9978157,17z/data=!3m1!4b1!4m6!3m5!1s0x89c25a59afc74fe1:0x3dc42dbcd7f6d772!8m2!3d40.6810643!4d-73.9965256!16s%2Fg%2F1ypmn1jwc?entry=ttu"
@@ -38,10 +40,10 @@
     <section class="btns">
         <button onclick="toggleLike()" id="heart-btn" class="btn"><i class="fa-solid fa-heart"></i></i></button>
         <div id="share-btns">
-            <a class="link" target="blank"><i class="fa-solid fa-link"></i></a>
-            <a class="fb" target="blank"><i class="fa-brands fa-square-facebook"></i></a>
-            <a class="whatsApp" target="blank"><i class="fa-brands fa-square-whatsapp"></i></a>
-            <a class="x" target="blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+            <button><a class="link" target="blank"><i class="fa-solid fa-link"></i></a></button>
+            <button><a class="fb" target="blank"><i class="fa-brands fa-square-facebook"></i></a></button>
+            <button><a class="whatsApp" target="blank"><i class="fa-brands fa-square-whatsapp"></i></a></button>
+            <button><a class="x" target="blank"><i class="fa-brands fa-square-x-twitter"></i></a></button>
         </div>
     </section>
     
