Fix bug with color of like button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </figure>
     
     <section class="btns">
-        <button onclick="toggleLike()" id="heart-btn" class="btn"><i class="fa-solid fa-heart"></i></i></button>
+        <button onclick="toggleLike()" style="color: var(--accent-color);" id="heart-btn" class="btn"><i class="fa-solid fa-heart"></i></i></button>
         <div id="share-btns">
             <button><a class="link" target="blank"><i class="fa-solid fa-link"></i></a></button>
             <button><a class="fb" target="blank"><i class="fa-brands fa-square-facebook"></i></a></button>
