--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Everyone is invited to this exclusive stoop sale!"
+      content="Everyone is invited to this exclusive stoop sale in Brooklyn!"
     />
     <link href="index.css" rel="stylesheet" />
     <title>Stoop Sale Invite</title>
@@ -31,11 +31,7 @@
     <!-- Description -->
     <p id="desc">
       Attention bargain hunters! This stoop sale in Brooklyn is an event you
-      won't want to miss. Browse an array of gently used, high-quality items at
-      unbeatable prices. Whether you're searching for stylish clothing, or
-      unexpected surprises, we've got it all! Don't pass up the chance to score
-      amazing deals and discover one-of-a-kind pieces right in your own
-      community.
+      won't want to miss. Name your prices for our gently used, high-quality clothing and homewear. Whether you're looking for unique pieces to add to your wardrobe or simply want to enjoy a fun day out, this is the event for you!
     </p>
 
     <!-- Images -->
