--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Header Section -->
     <header>
-      <h1>Uncover Unique Finds at Our Stoop Sale</h1>
+      <h1>Uncover <span class="em">Unique</span> Finds at Our Stoop Sale</h1>
       <div id="date">
         <h2>Saturday August 10th</h2>
         <h2>10am - 4pm</h2>
@@ -21,6 +21,46 @@
     </header>
 
     <!-- Map Section -->
+    <script async defer>
+        ((g) => {
+          var h,
+            a,
+            k,
+            p = "The Google Maps JavaScript API",
+            c = "google",
+            l = "importLibrary",
+            q = "__ib__",
+            m = document,
+            b = window;
+          b = b[c] || (b[c] = {});
+          var d = b.maps || (b.maps = {}),
+            r = new Set(),
+            e = new URLSearchParams(),
+            u = () =>
+              h ||
+              (h = new Promise(async (f, n) => {
+                await (a = m.createElement("script"));
+                e.set("libraries", [...r] + "");
+                for (k in g)
+                  e.set(
+                    k.replace(/[A-Z]/g, (t) => "_" + t[0].toLowerCase()),
+                    g[k]
+                  );
+                e.set("callback", c + ".maps." + q);
+                a.src = `https://maps.${c}apis.com/maps/api/js?` + e;
+                d[q] = f;
+                a.onerror = () => (h = n(Error(p + " could not load.")));
+                a.nonce = m.querySelector("script[nonce]")?.nonce || "";
+                m.head.append(a);
+              }));
+          d[l]
+            ? console.warn(p + " only loads once. Ignoring:", g)
+            : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
+        })({
+          key: "AIzaSyB92fiLb4TeBfUyIEiA3TRZmt3gS07uZvA",
+          v: "weekly",
+        });
+      </script>
     <a
       href="https://www.google.com/maps/place/Court+St,+Brooklyn,+NY/@40.6810643,-73.9978157,17z/data=!3m1!4b1!4m6!3m5!1s0x89c25a59afc74fe1:0x3dc42dbcd7f6d772!8m2!3d40.6810643!4d-73.9965256!16s%2Fg%2F1ypmn1jwc?entry=ttu"
     >
@@ -36,8 +76,14 @@
 
     <!-- Images -->
     <figure>
-        <img class="responsive-img" src="fashion07.jpg" alt="An illustration of a girl trying on shoes and taking a picture." />
-        <img class="responsive-img" src="fashion02.jpg" alt="An illustration of various items of clothing." />
+        <div>
+            <img class="responsive-img" src="fashion02.jpg" alt="An illustration of various items of clothing." />
+            <figcaption>You never know what you'll find!</figcaption>
+        </div>
+        <div>
+            <img class="responsive-img" src="fashion07.jpg" alt="An illustration of a girl trying on shoes and taking a picture." />
+            <figcaption>Let everyone know you're coming!</figcaption>
+        </div>
     </figure>
     
     <!-- Buttons Section -->
@@ -51,48 +97,8 @@
         </div>
     </section>
     
-    <!-- Scripts below -->
+    <!-- Other Scripts below -->
     <script src="https://kit.fontawesome.com/d6f5b3e8a3.js" crossorigin="anonymous"></script>
-    <script async defer>
-      ((g) => {
-        var h,
-          a,
-          k,
-          p = "The Google Maps JavaScript API",
-          c = "google",
-          l = "importLibrary",
-          q = "__ib__",
-          m = document,
-          b = window;
-        b = b[c] || (b[c] = {});
-        var d = b.maps || (b.maps = {}),
-          r = new Set(),
-          e = new URLSearchParams(),
-          u = () =>
-            h ||
-            (h = new Promise(async (f, n) => {
-              await (a = m.createElement("script"));
-              e.set("libraries", [...r] + "");
-              for (k in g)
-                e.set(
-                  k.replace(/[A-Z]/g, (t) => "_" + t[0].toLowerCase()),
-                  g[k]
-                );
-              e.set("callback", c + ".maps." + q);
-              a.src = `https://maps.${c}apis.com/maps/api/js?` + e;
-              d[q] = f;
-              a.onerror = () => (h = n(Error(p + " could not load.")));
-              a.nonce = m.querySelector("script[nonce]")?.nonce || "";
-              m.head.append(a);
-            }));
-        d[l]
-          ? console.warn(p + " only loads once. Ignoring:", g)
-          : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
-      })({
-        key: "AIzaSyB92fiLb4TeBfUyIEiA3TRZmt3gS07uZvA",
-        v: "weekly",
-      });
-    </script>
     <script src="index.js"></script>
   </body>
 </html>
