Add invitation section & add whitespace

--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
   <body>
     <!-- Header Section -->
     <header>
+        <h1>You're</h1>
+        <h1>invited!</h1>
+        <button><i class="fa-solid fa-down-long"></i></button>
+    </header>
+
+    <!-- Invitation Intro -->
+    <section>
       <h1>Uncover <span class="em">Unique</span> Finds at Our Stoop Sale</h1>
       <div id="date">
         <h2>Saturday August 10th</h2>
         <h2>10am - 4pm</h2>
       </div>
-    </header>
+    </section>
 
-    <!-- Map Section -->
+    <!-- Invitation Map -->
     <script async defer>
         ((g) => {
           var h,
@@ -68,13 +75,13 @@
     </a>
     <p id="map-caption">Corner of Court Street and 2nd Avenue, Carroll Gardens, Brooklyn, NY</p>
     
-    <!-- Description -->
+    <!-- Invitation Description  -->
     <p id="desc">
       Attention bargain hunters! This stoop sale in Brooklyn is an event you
       won't want to miss. Name your prices for our gently used, high-quality clothing and homewear. Whether you're looking for unique pieces to add to your wardrobe or simply want to enjoy a fun day out, this is the event for you!
     </p>
 
-    <!-- Images -->
+    <!-- Invitation mages -->
     <figure>
         <div>
             <img class="responsive-img" src="fashion02.jpg" alt="An illustration of various items of clothing." />
